# product-catalogue-tools

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  editor.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.editor.txt
.github/workflows/: deploy-preview.yml  docker-publish.yml
src/product_catalogue_tools/: catalog_utils.py  json_creator.py
utils/: catalog_utils.py
