[project]
name = "product-catalogue-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "pooch",
    "pandas",
    "xarray",
    "openpyxl",
    "tabulate",
    "markdown",
    "panel",
    "cdflib",
    "jupyterlab",
    "jupyterlab-git",
    "jupytext",
    "pip",
    "numpy",
]

[tool.uv]
dev-dependencies = []
