[project]
name = "product-catalogue-tools"
version = "0.1.0"
description = "Tools for working with the Swarm product catalogue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown==3.6",
    "pandas==2.2.2",
    "panel==1.4.4",
    "tabulate==0.9.0",
]

[project.optional-dependencies]
dev = [
    "cdflib>=1.3.1",
    "jupyterlab>=4.2.5",
    "jupyterlab-git>=0.50.1",
    "jupytext>=1.16.4",
    "openpyxl>=3.1.5",
    "pooch>=1.8.2",
    "xarray>=2024.7.0",
]
